--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,6 +30,7 @@
 }
 
 .btn-purchased{
+  color: green;
   padding: 1px 5px 1px 5px;
   border:1px solid rgb(190, 181, 181);
   border-radius: 5px;
@@ -39,6 +40,7 @@
   
 }
 .btn-delete{
+  color:  red ;
   padding: 5px,7px,5px,7px;
   border:1px solid lightgray;
   border-radius: 5px;
@@ -47,5 +49,8 @@
 
 .grocery-actions{
   margin-left: auto;
+}
+.from-element-container {
+  text-align: left;
 }
 
